@@ -54,3 +54,4 @@ Eric FREYENS: debuging
 Fabrice FLORE-THEBAULT: various important bug report and much more
 Mario GZUK: helpful and friendly feedback
 Yanick DURANT: patch
+Raphaël SURCOUF: patch
