@@ -32,19 +32,13 @@ sub doInventory {
   my $zone;
   my $sun_class_cpu=0;
 
-  $OSLevel=`uname -r`;
-
-
-  if ( $OSLevel =~ /5.8/ ){
-	$zone = "global";
+  if( can_run("zonename") ) {
+      $zone=`zonename`;
   }else{
-	  foreach (`zoneadm list -p`){
-		$zone=$1 if /^0:([a-z]+):.*$/;
-	  }
+      $zone = "global";
   }
 
-  if ($zone)
-  {
+  if ($zone eq "global" ) {
   # first, we need determinate on which model of Sun Server we run,
   # because prtdiags output (and with that memconfs output) is differend
   # from server model to server model
